show 	modified:   malletOuput/composition.txt 	modified:   malletOuput/keys.txt 	modified:   malletOuput/topic-phrases.xml 	modified:   malletOuput/topic-state.gz 	new file:   malletOuput/word_top.txt 	modified:   nbproject/build-impl.xml 	modified:   nbproject/genfiles.properties 	new file:   nbproject/private/private.xml 	modified:   nbproject/project.properties 	modified:   nbproject/project.xml 	modified:   preprocess.mallet 	new file:   src/java/javabean/StylesBean.java 	new file:   src/java/processshow/GenerateTopicsJson.java 	new file:   src/java/servlet/GenerateViewServlet.java 	modified:   src/java/servlet/PreProcessServlet.java 	new file:   src/java/show/GenerateFilesForView.java 	modified:   web/WEB-INF/web.xml 	new file:   web/css/show.css 	modified:   web/flare.json 	modified:   web/home.html 	deleted:    web/index.html

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -4,6 +4,10 @@
         <servlet-name>PreProcessServlet</servlet-name>
         <servlet-class>servlet.PreProcessServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>GenerateViewServlet</servlet-name>
+        <servlet-class>servlet.GenerateViewServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>PreProcessServlet</servlet-name>
         <url-pattern>/PreProcessServlet</url-pattern>
@@ -15,6 +19,10 @@
             /Applications/NetBeans/glassfish-4.0/data/
         </param-value>
     </context-param>
+    <servlet-mapping>
+        <servlet-name>GenerateViewServlet</servlet-name>
+        <url-pattern>/GenerateViewServlet</url-pattern>
+    </servlet-mapping>
     <session-config>
         <session-timeout>
             30
