--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,12 +28,14 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.common-lang3.jar=/Users/apple/NetBeansProjects/jar/common-lang3.jar
 file.reference.commons-collections-3.2.1.jar=/Users/apple/NetBeansProjects/jar/lib/commons-collections-3.2.1.jar
 file.reference.commons-configuration-1.6.jar=/Users/apple/NetBeansProjects/jar/lib/commons-configuration-1.6.jar
 file.reference.commons-fileupload-1.3.1.jar=/Users/apple/NetBeansProjects/jar/commons-fileupload-1.3.1.jar
 file.reference.commons-io-2.4.jar=/Users/apple/NetBeansProjects/jar/commons-io-2.4.jar
 file.reference.commons-lang-2.5.jar=/Users/apple/NetBeansProjects/jar/lib/commons-lang-2.5.jar
 file.reference.commons-logging-1.1.1.jar=/Users/apple/NetBeansProjects/jar/lib/commons-logging-1.1.1.jar
+file.reference.json-20140107.jar=/Users/apple/NetBeansProjects/jar/json-20140107.jar
 file.reference.jsoup-1.3.3.jar=/Users/apple/NetBeansProjects/jar/jsoup-1.3.3.jar
 file.reference.org.eclipse.core.contenttype_3.4.1.R35x_v20090826-0451.jar=/Users/apple/NetBeansProjects/jar/lib/org.eclipse.core.contenttype_3.4.1.R35x_v20090826-0451.jar
 file.reference.org.eclipse.core.jobs_3.4.100.v20090429-1800.jar=/Users/apple/NetBeansProjects/jar/lib/org.eclipse.core.jobs_3.4.100.v20090429-1800.jar
@@ -71,7 +73,9 @@ javac.classpath=\
     ${file.reference.org.eclipse.osgi_3.5.2.R35x_v20100126.jar}:\
     ${file.reference.commons-fileupload-1.3.1.jar}:\
     ${file.reference.jsoup-1.3.3.jar}:\
-    ${file.reference.commons-io-2.4.jar}
+    ${file.reference.commons-io-2.4.jar}:\
+    ${file.reference.common-lang3.jar}:\
+    ${file.reference.json-20140107.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
