--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,6 +36,7 @@ file.reference.commons-io-2.4.jar=/Users/apple/NetBeansProjects/jar/commons-io-2
 file.reference.commons-lang-2.5.jar=/Users/apple/NetBeansProjects/jar/lib/commons-lang-2.5.jar
 file.reference.commons-logging-1.1.1.jar=/Users/apple/NetBeansProjects/jar/lib/commons-logging-1.1.1.jar
 file.reference.json-20140107.jar=/Users/apple/NetBeansProjects/jar/json-20140107.jar
+file.reference.json-lib.jar=/Users/apple/NetBeansProjects/jar/json-lib.jar/json-lib.jar
 file.reference.jsoup-1.3.3.jar=/Users/apple/NetBeansProjects/jar/jsoup-1.3.3.jar
 file.reference.org.eclipse.core.contenttype_3.4.1.R35x_v20090826-0451.jar=/Users/apple/NetBeansProjects/jar/lib/org.eclipse.core.contenttype_3.4.1.R35x_v20090826-0451.jar
 file.reference.org.eclipse.core.jobs_3.4.100.v20090429-1800.jar=/Users/apple/NetBeansProjects/jar/lib/org.eclipse.core.jobs_3.4.100.v20090429-1800.jar
@@ -75,7 +76,8 @@ javac.classpath=\
     ${file.reference.jsoup-1.3.3.jar}:\
     ${file.reference.commons-io-2.4.jar}:\
     ${file.reference.common-lang3.jar}:\
-    ${file.reference.json-20140107.jar}
+    ${file.reference.json-20140107.jar}:\
+    ${file.reference.json-lib.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
